# database-example

./: .gitmodules  README.md
backend/: CMakeLists.txt
backend/src/: CMakeLists.txt  communication.c  communication.h  dbCommands.c  dbCommands.h  dbConnection.c  dbConnection.h  defines.h  main.c  parser.c  parser.h
frontend/: client.html
